Update game server and skin service
Add query server info with id
Fix get skin info bug
