# app/game/server/dao/server.go
@@ -23,3 +23,20 @@ func (d *dao) UpdateRcon(server *model.Info) (err error) {
 	err = d.db.Model(server).Update("rcon", server.Rcon).Error
 	return
 }
+
+func (d *dao) InfoWithID(id int32) (res *model.Info, err error) {
+	res = &model.Info{}
+
+	// DB
+	err = d.db.First(res, id).Error
+	if err == gorm.ErrRecordNotFound {
+		err = ecode.Errorf(codes.NotFound, "Can not found serverID (%d)", id)
+	}
+	return
+}
+
+func (d *dao) AllInfo() (res []*model.Info, err error) {
+	// DB
+	err = d.db.Find(&res).Error
+	return
+}
