# app/game/server/service/server.go
@@ -8,7 +8,9 @@ import (
 	"strconv"
 )
 
-func (s *Service) Info(ctx context.Context, req *pb.InfoReq) (resp *pb.InfoResp, err error) {
+func (s *Service) Init(ctx context.Context, req *pb.InitReq) (resp *pb.InitResp, err error) {
+	resp = &pb.InitResp{}
+
 	if req.Address == "" || req.Port == 0 {
 		err = ecode.Errorf(codes.InvalidArgument, "Address or port should not be empty")
 		return
@@ -24,15 +26,58 @@ func (s *Service) Info(ctx context.Context, req *pb.InfoReq) (resp *pb.InfoResp,
 	res.GenerateRcon()
 	err = s.dao.UpdateRcon(res)
 
-	resp = &pb.InfoResp{
-		Info: &pb.Info{
-			ServerId: res.ServerID,
-			ModId:    res.ModID,
-			GameId:   res.GameID,
-			Rcon:     res.Rcon,
-			Hostname: res.Hostname,
-			Address:  res.Address,
-		},
+	resp.Info = &pb.Info{
+		ServerId: res.ServerID,
+		ModId:    res.ModID,
+		GameId:   res.GameID,
+		Rcon:     res.Rcon,
+		Hostname: res.Hostname,
+		Address:  res.Address,
+	}
+	return
+}
+
+func (s *Service) Info(ctx context.Context, req *pb.InfoReq) (resp *pb.InfoResp, err error) {
+	resp = &pb.InfoResp{}
+
+	if req.ServerId <= 0 {
+		err = ecode.Errorf(codes.InvalidArgument, "Invalid ServerID(%d)", req.ServerId)
+		return
+	}
+
+	res, err := s.dao.InfoWithID(req.ServerId)
+	if err != nil {
+		return
+	}
+
+	resp.Info = &pb.Info{
+		ServerId: res.ServerID,
+		ModId:    res.ModID,
+		GameId:   res.GameID,
+		Rcon:     res.Rcon,
+		Hostname: res.Hostname,
+		Address:  res.Address,
+	}
+	return
+}
+
+func (s *Service) AllInfo(ctx context.Context, req *pb.AllInfoReq) (resp *pb.AllInfoResp, err error) {
+	resp = &pb.AllInfoResp{}
+
+	res, err := s.dao.AllInfo()
+	if err != nil {
+		return
+	}
+
+	for _, v := range res {
+		resp.Info = append(resp.Info, &pb.Info{
+			ServerId: v.ServerID,
+			ModId:    v.ModID,
+			GameId:   v.GameID,
+			Rcon:     v.Rcon,
+			Hostname: v.Hostname,
+			Address:  v.Address,
+		})
 	}
 	return
 }
